[tool.poetry]
name = "bot-noticias-telegram"
version = "0.1.0"
description = "Bot de Telegram para noticias cripto"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.0"
feedparser = "^6.0.11"
apscheduler = "^3.11.0"
flask = "^3.1.0"  # Opcional (solo si usas webhooks luego)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
